name:                rsched
version:             0.1.0.0
synopsis:            Scheduler using Redis as backend
description:         Scheduler using Redis as backend
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Takashi Kawachi
maintainer:          tkawachi@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rsched
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable rsched
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rsched
  default-language:    Haskell2010

test-suite rsched-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rsched
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tkawachi/rsched
